# axum-template

./: Cargo.toml  README.md
app/: Cargo.toml
app/src/: main.rs
lib-api/: Cargo.toml
lib-api/src/: lib.rs
lib-api/src/components/: mod.rs
lib-api/src/components/auth/: mod.rs  models.rs
lib-api/src/middlewares/: auth.rs  metrics.rs
lib-api/src/models/: api_response.rs  mod.rs
lib-api/src/utils/: macros.rs
lib-core/: Cargo.toml
lib-core/src/: app_state.rs  lib.rs
lib-core/src/managers/: cache_manager.rs  mod.rs  thread_manager.rs
lib-core/src/services/auth_service/: mod.rs  token_claims.rs
lib-db/: Cargo.toml
lib-db/src/: lib.rs  psql_connection.rs  user_auth_driver.rs
lib-shared/: Cargo.toml
lib-shared/src/: env_service.rs  lib.rs  metrics.rs
