[package]
name = "lib-core"
version = "0.1.0"
edition = "2024"

[dependencies]
lib-shared = { path = "../lib-shared" }
lib-db = { path = "../lib-db" }
parking_lot = { workspace = true }
hashbrown = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
moka = { workspace = true }
jsonwebtoken = { workspace = true }
chrono = { workspace = true }
derived = { workspace = true }
